Fixed images in release notes being too large for the modal

--- a/UI/Web/src/app/shared/update-notification/update-notification-modal.component.scss
+++ b/UI/Web/src/app/shared/update-notification/update-notification-modal.component.scss
@@ -3,3 +3,7 @@
     word-wrap: break-word;
     white-space: pre-wrap;
 }
+
+img {
+  max-width: 100%;
+}
